# ot-harjoitustyo

./: .coverage  .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite  test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/misc/: sekvenssikaavio.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: .monopoliClassDiagram.md.swp  HSLsekvenssikaavio.md  HSLsekvenssikaavio.txt  HSLsekvenssikaavio_kuva  machineSekvenssikaavio.txt  machineSekvenssikaavio_kuva  monopoliClassDiagram.md  sekvenssikaavio.md
src/: config.py  database_connection.py  draw_display.py  end_screen.py  event.py  game_loop.py  index.py  initialize_database.py  level.py  map.py
src/entities/: score.py
src/logic/: clock.py  event.py  game_loop.py  level.py
src/movement/: rotate_block
src/repositories/: scores_repository.py
src/shape/: get_shape.py  shape_indexes.py  shapes.py
src/sprites/: blocks.py  create_shape.py  new_block.py  new_piece.py  shapes.py
src/tests/: clock_test.py  event_test.py  game_loop_test.py  level_test.py  score_repository_test.py
src/window/: draw_display.py  map.py
